# josie-rs

./: .gitignore  Cargo.toml  README.md
crates/josie-cli/: Cargo.toml
crates/josie-cli/src/: lib.rs  main.rs
crates/josie-core/: Cargo.toml  README.md
crates/josie-core/docs/contracts/: Program.ts  README.md
crates/josie-core/examples/: backend_shape.josie  factorial.josie  hello.josie  math.josie  run_backend.rs  run_data_eng.rs  run_josie.rs  wrangle.josie
crates/josie-core/src/: compiler.rs  engine.rs  jval.rs  lib.rs  program.rs  reader.rs  runtime.rs  vm.rs
crates/josie-web/: Cargo.toml  README.md
crates/josie-web/docs/: BLESSED_LIBRARIES.md  FEATURE_CHECKLIST.md  JOSIEML_DEFINITION.md  JOSIEML_EXAMPLES.md  JOSIEML_SPEC.md  JOSIEML_WRITING_GUIDE.md  JOSIE_REACTIVE_PRIMITIVES.md  TAILWIND_PARITY_PLAN.md
crates/josie-web/docs/contracts/: README.md  RuntimeKeywords.ts  WebInterface.ts
crates/josie-web/docs/contracts/examples/: component.josie  component.josieml  example.josie  example.josieml
crates/josie-web/examples/: backend_subscribe_notify.rs  export_smoke.rs  program.josieml  todo_app.josie  todo_app.josieml  todo_app.rs
crates/josie-web/src/: RUNTIME-README.md  engine.rs  josie-runtime-dev.js  josie-runtime.js  jsminify.rs  lib.rs  rui.rs  runtime.rs  tw.rs
crates/josie-web/src/adapters/: axum.rs
crates/josie-web/src/tailwind/: josieml.rs  mod.rs  tw.rs
