[package]
name = "josie-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "josie_cli"
path = "src/lib.rs"

[[bin]]
name = "josie"
path = "src/main.rs"

[dependencies]
josie-core = { version = "0.1.0", path = "../josie-core" }
josie-web = { version = "0.1.0", path = "../josie-web", features = ["tailwind"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }
notify = "8.1.0"
