[package]
name = "josie-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["JOSIE Team"]
repository = "https://github.com/josie-lang/josie-rs"
homepage = "https://josie-lang.org"
documentation = "https://josie-lang.org"
description = "High-performance core runtime for JOSIE (JSON Omni Safe Interactive Expressions), with deterministic tree-based pipeline execution and embeddable operator/function registries."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
