[package]
name = "josie-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
tailwind = []
axum = ["dep:axum"]

[dependencies]
josie-core = { path = "../josie-core" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8", optional = true }
ureq = { version = "2.12.1" }
