[package]
name = "josie-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://josie-lang.org"
documentation = "https://docs.rs/josie-web"
readme = "README.md"
description = "Web framework for JOSIE (JSON Omni Safe Interactive Expressions), enabling compile-first reactive web pages with strict security walls and deterministic performance."
keywords = ["josie", "web", "reactive", "compiler", "runtime"]
categories = ["web-programming", "development-tools"]

[dependencies]
josie-core = { version = "0.1.0", path = "../josie-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
